refactor(kamino): remove deprecated KaminoReserveContextsParser
- Delete `KaminoReserveContextsParser` and associated tests due to redundancy.
- Introduce dedicated listeners for reserves and vaults in `KaminoCacheImpl`.
- Improve reserve change notification and persistence logic.
- Replace usage of `asyncReserveUpdates` and redundant checks with a cleaner `numReserveChanges` flow.
- Adjust JSON file paths and streamline listener management.
- Refactor `Release Please` workflow and config for simplicity.